<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pybind11_catkin</name>
  <version>2.4.3</version>
  <description>The pybind11 package</description>
  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <maintainer email="wolfgang.merkt@ed.ac.uk">Wolfgang Merkt</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <build_export_depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</build_export_depend>
  <build_export_depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</build_export_depend>
  <build_export_depend>eigen</build_export_depend>
</package>
